--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -155,6 +155,14 @@
   url          = {https://github.com/unitaryai/detoxify}
 }
 
+@misc{deep_translator,
+  title        = {deep-translator},
+  author       = {nidhaloff},
+  howpublished = {Github},
+  year         = {2020},
+  url          = {https://github.com/nidhaloff/deep-translator}
+}
+
 @misc{jigsaw-comp1,
   author    = {cjadams and 
                Jeffrey Sorensen and 
@@ -376,4 +384,21 @@
   pages   = {993--1022},
   year    = {2003},
   url     = {https://www.jmlr.org/papers/volume3/blei03a/blei03a.pdf?ref=https://githubhelp.com}
+}
+
+@misc{twitter_stats,
+  title  = {The Number of tweets per day in 2022},
+  author = {David Sayce},
+  year   = {2022},
+  url    = {https://www.dsayce.com/social-media/tweets-day/}
+}
+
+@article{tsne_paper,
+  author  = {van der Maaten, Laurens and Hinton, Geoffrey},
+  year    = {2008},
+  month   = {11},
+  pages   = {2579-2605},
+  title   = {Viualizing data using t-SNE},
+  volume  = {9},
+  journal = {Journal of Machine Learning Research}
 }
